2005-12-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/RPN.pm: DUP and EXC accept undefined arguments now

2005-12-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/RPN.pm: New RPN function: NUM

2005-11-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/ttproclist.in: Two new functions: lc, uc	

2005-11-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: Added SNMPv3 support

2005-10-19  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/genreport.in: Report generator utility

2005-10-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoVDSL.pm:
	New discovery module for Cisco Catalyst LRE

2005-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/default-dir.html, templates/expanded-dir.html:
	Alex Ustyancev's patches for aliased leaf nodes

	* perllib/Torrus/SQL.pm: New module dependency: DBIx::Sequence

2005-10-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/SQL.pm: new module dependencies:
	DBIx::Abstract, DBI.

2005-10-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm:
	added support for dual-CPU cisco routers (7301)

2005-09-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/AlliedTelesyn_PBC18.pm:
	new discovery module

2005-09-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm:
	New discovery parameter: define-tokensets

2005-08-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	Replaced $Torrus::DevDiscover::listAdminDownInterfaces
	with parameter RFC2863_IF_MIB::list-admindown-interfaces
	and $Torrus::DevDiscover::listNotPresentInterfaces
	with RFC2863_IF_MIB::list-notpresent-interfaces
