@@ -1,3 +1,7 @@
+2006-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/RPN.pm: New RPM functions: INF, NEGINF
+
 2005-12-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/RPN.pm: DUP and EXC accept undefined arguments now
